--- a/app/src/main/res/layout/fragment_subfeed.xml
+++ b/app/src/main/res/layout/fragment_subfeed.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/content"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="wrap_content" >
 
     <androidx.recyclerview.widget.RecyclerView style="?android:textAppearanceMedium"
         android:padding="16dp"
@@ -10,4 +11,4 @@
         android:lineSpacingMultiplier="1.2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-</ScrollView>
+</LinearLayout>
