--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,5 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="toolbar_margin">52sp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 </resources>
