--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="fragment_home"
+        android:id="@id/fragment_home"
         android:title="@string/home"
         android:icon="@drawable/outline_dynamic_feed_24" />
     <item
