--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,64 @@
-<?xml version="1.0" encoding="utf-8"?>
+
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="seed">#5f3575</color>
+    <color name="md_theme_light_primary">#7C4997</color>
+    <color name="md_theme_light_onPrimary">#FFFFFF</color>
+    <color name="md_theme_light_primaryContainer">#F6D9FF</color>
+    <color name="md_theme_light_onPrimaryContainer">#310049</color>
+    <color name="md_theme_light_secondary">#A300B9</color>
+    <color name="md_theme_light_onSecondary">#FFFFFF</color>
+    <color name="md_theme_light_secondaryContainer">#FFD6FD</color>
+    <color name="md_theme_light_onSecondaryContainer">#36003E</color>
+    <color name="md_theme_light_tertiary">#815252</color>
+    <color name="md_theme_light_onTertiary">#FFFFFF</color>
+    <color name="md_theme_light_tertiaryContainer">#FFDAD9</color>
+    <color name="md_theme_light_onTertiaryContainer">#331112</color>
+    <color name="md_theme_light_error">#BA1A1A</color>
+    <color name="md_theme_light_errorContainer">#FFDAD6</color>
+    <color name="md_theme_light_onError">#FFFFFF</color>
+    <color name="md_theme_light_onErrorContainer">#410002</color>
+    <color name="md_theme_light_background">#FFFBFF</color>
+    <color name="md_theme_light_onBackground">#1D1B1E</color>
+    <color name="md_theme_light_surface">#FFFBFF</color>
+    <color name="md_theme_light_onSurface">#1D1B1E</color>
+    <color name="md_theme_light_surfaceVariant">#EADFEA</color>
+    <color name="md_theme_light_onSurfaceVariant">#4B444D</color>
+    <color name="md_theme_light_outline">#7D747E</color>
+    <color name="md_theme_light_inverseOnSurface">#F6EFF3</color>
+    <color name="md_theme_light_inverseSurface">#332F33</color>
+    <color name="md_theme_light_inversePrimary">#E7B3FF</color>
+    <color name="md_theme_light_shadow">#000000</color>
+    <color name="md_theme_light_surfaceTint">#7C4997</color>
+    <color name="md_theme_light_outlineVariant">#CEC3CE</color>
+    <color name="md_theme_light_scrim">#000000</color>
+    <color name="md_theme_dark_primary">#E7B3FF</color>
+    <color name="md_theme_dark_onPrimary">#4A1764</color>
+    <color name="md_theme_dark_primaryContainer">#62307D</color>
+    <color name="md_theme_dark_onPrimaryContainer">#F6D9FF</color>
+    <color name="md_theme_dark_secondary">#FBABFF</color>
+    <color name="md_theme_dark_onSecondary">#580065</color>
+    <color name="md_theme_dark_secondaryContainer">#7C008E</color>
+    <color name="md_theme_dark_onSecondaryContainer">#FFD6FD</color>
+    <color name="md_theme_dark_tertiary">#F5B7B7</color>
+    <color name="md_theme_dark_onTertiary">#4C2526</color>
+    <color name="md_theme_dark_tertiaryContainer">#663B3B</color>
+    <color name="md_theme_dark_onTertiaryContainer">#FFDAD9</color>
+    <color name="md_theme_dark_error">#FFB4AB</color>
+    <color name="md_theme_dark_errorContainer">#93000A</color>
+    <color name="md_theme_dark_onError">#690005</color>
+    <color name="md_theme_dark_onErrorContainer">#FFDAD6</color>
+    <color name="md_theme_dark_background">#1D1B1E</color>
+    <color name="md_theme_dark_onBackground">#E8E0E5</color>
+    <color name="md_theme_dark_surface">#1D1B1E</color>
+    <color name="md_theme_dark_onSurface">#E8E0E5</color>
+    <color name="md_theme_dark_surfaceVariant">#4B444D</color>
+    <color name="md_theme_dark_onSurfaceVariant">#CEC3CE</color>
+    <color name="md_theme_dark_outline">#978E98</color>
+    <color name="md_theme_dark_inverseOnSurface">#1D1B1E</color>
+    <color name="md_theme_dark_inverseSurface">#E8E0E5</color>
+    <color name="md_theme_dark_inversePrimary">#7C4997</color>
+    <color name="md_theme_dark_shadow">#000000</color>
+    <color name="md_theme_dark_surfaceTint">#E7B3FF</color>
+    <color name="md_theme_dark_outlineVariant">#4B444D</color>
+    <color name="md_theme_dark_scrim">#000000</color>
 </resources>
